# sypherterm

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  Taskfile.yml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.js
.github/workflows/: ci.yml
docs/: NATIVE_PERMISSIONS.md  SPEC_DRIVEN_DEVELOPMENT_PLAN.md
docs/release/: CAPABILITIES.md  CHECKLIST.md  DEPENDENCY_AUDIT.md
docs/specs/: README.md  SPEC-001-fundacao-app.md  SPEC-002-modelo-dominio-storage.md  SPEC-003-vault-criptografado-local.md  SPEC-004-control-plane-ipc.md  SPEC-005-data-plane-websocket-local.md  SPEC-006-engine-ssh-assincrona.md  SPEC-007-terminal-ui.md  SPEC-008-gerenciamento-perfis.md  SPEC-009-tabs-split-panes.md  SPEC-010-sync-byoi-mvp.md  SPEC-011-integracoes-nativas.md  SPEC-012-sftp-file-manager.md  SPEC-013-port-forwarding.md  SPEC-014-snippet-organizer.md  SPEC-015-release-hardening.md  TEMPLATE.md
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  sftp.rs  snippets.rs  state.rs  tunnel.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/ssh/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/sync/: mod.rs
src-tauri/src/ws/: mod.rs
src/lib/: api.ts  layout.test.ts  layout.ts  native.test.ts  native.ts  store.ts  websocket.ts
src/lib/components/: SessionStatus.svelte  TerminalInstance.svelte  TerminalPane.svelte  TerminalToolbar.svelte  TunnelIndicator.svelte
