[package]
name = "sypherterm"
version = "0.1.0"
description = "Modern open-source SSH client featuring secure local-first encryption and native sync to your own infrastructure."
authors = ["Gabriel Braz da Silva"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sypherterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
tauri-plugin-websocket = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time"] }
tokio-tungstenite = "0.27"
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
argon2 = "0.5"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
zeroize = "1"
